<resources>
    <string name="app_name">practice13</string>

    <string name="kurs">Введите курс обмена $</string>
    <string name="sum">Введите сумму</string>
    <string name="result">Результат:</string>
    <string name="sum_dol">сумма в долларах</string>
    <string name="dol_rub">1 USD = RUB</string>
    <string name="change">Конвертировть</string>

    <string name="gip1">введите первый катет</string>
    <string name="gip2">введите второй катет</string>
    <string name="gipres">гипотинуза</string>

    <string name="changeActivity">треугольник</string>

</resources>