<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#272727"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/kurs"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:textColor="#ffffff"
        android:id="@+id/editTextNumber3"
        android:layout_width="235dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/kurs"
        android:inputType="number"
        android:textColorHint="#424242"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <requestFocus />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/sum"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="249dp"
        android:textColor="#ffffff"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColorHint="#424242"
        android:hint="@string/sum"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"

        android:text="@string/result"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />


    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:fontFamily="serif"
        android:onClick="ButtonClick"
        android:text="@string/change"
        app:backgroundTint="#9E9E9E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:onClick="SecondActivity"
        android:text="@string/changeActivity"
        app:backgroundTint="#9E9E9E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="288dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="369dp"
        android:layout_height="65dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="224dp"
        android:fontFamily="serif"
        android:text="Удобный калькулятор нахождения гипотинузы, периметра и площади треугольника по его двум катетам!"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>