<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#272727"
    tools:context=".SecondActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/gip1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:textColorHint="#424242"
        android:textColor="#ffffff"
        android:id="@+id/editTextNumber3"
        android:layout_width="235dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/gip1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <requestFocus />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/gip2"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

    <EditText
        android:textColorHint="#424242"
        android:textColor="#ffffff"
        android:id="@+id/editTextNumber4"
        android:layout_width="249dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/gip2"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"

        android:text="@string/result"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text=""
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="119dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:onClick="ButtonClick"
        android:text="периметр"
        app:backgroundTint="#9E9E9E"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="119dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:onClick="ButtonClick"
        android:text="площадь"
        app:backgroundTint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:onClick="MainActivity"
        android:text="посчитать доллор"
        app:backgroundTint="#9E9E9E"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="119dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:onClick="ButtonClick"
        android:text="@string/gipres"

        app:backgroundTint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:fontFamily="serif" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="312dp"
        android:layout_height="37dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="224dp"
        android:fontFamily="serif"
        android:text="Посчитайте сколько у вас доллоров, зная         всего лишь его курс!"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>